--- a/src/component/FilterHeader/FilterHeader.css
+++ b/src/component/FilterHeader/FilterHeader.css
@@ -1,7 +1,7 @@
 .filterheader{
     display: flex;
     justify-content: space-between;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     width: 100%;
     height:75px;
     background-color: rgb(249, 250, 250);
