--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,9 +1,9 @@
 .header{
     display: flex;
     justify-content: space-between;
-    margin-top: 60px;
+    /* margin-top: 8vh; */
     width: 100%;
-    height:75px;
+    height:5%;
     background-color: rgb(249, 250, 250);
 }
 .header-left{
