--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@ body {
   margin: 0;
   transition: background-color 0.3s ease;
   background-color: rgb(249, 250, 250);
-  border:1px solid rgb(244,245,246);
+
 }
 #main{
   margin: auto;
-  max-width: 1500px;
-  max-height:1000px;
+  width: 75vw;
+  height:100vh;
 }
 body.login-open #main {
   background-color: rgba(0, 0, 0, 0.5);
@@ -21,7 +21,7 @@ body.login-open #main {
 }
 
 #main.blur {
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   pointer-events: none;
 }
 
@@ -32,4 +32,22 @@ body.login-open #main {
 .dark-app {
   background-color: rgba(0, 0, 0, 0.7);
   color: white; 
+}
+.content{
+  width: 100%;
+  height: 100%;
+}
+.header{
+  height: 7%;
+  padding-bottom: 2%;
+}
+.app{
+  height: 93vh;
+  padding-top: 10vh;
+}
+.main-content{
+  height: 84vh;
+}
+.filtersidebar{
+  width: 25%;
 }
