--- a/src/page/EmployeeLifeCycle/EmployeeSkill/EmployeeSkill.css
+++ b/src/page/EmployeeLifeCycle/EmployeeSkill/EmployeeSkill.css
@@ -1,27 +1,27 @@
 .employee-skill-map {
     background-color: rgb(249, 250, 250);
-    height: 790px;
+    height: 100%;
 }
 
 .employee-skill-map-table {
     background-color: white;
     border-radius: 15px;
     width: 1185px;
-    padding: 30px;
+    padding: 10px 5px 5px 5px;
     margin-bottom: 20px;
     overflow-y: auto;
-    max-width: 100%;
+    width: 75%;
     height: 730px;
 }
 
 .employee-skill-map-table-header {
-    display: flex;
+    display: inline-block;
     background-color: white;
-    width: 1100px;
+    width: 100%;
 }
 
 .employee-skill-map-search-filter {
-    padding: 0px 20px;
+display: inline-block;
 }
 
 .employee-skill-map-search-filter-input {
@@ -31,11 +31,13 @@
     border-radius: 10px;
     width: 150px;
     border: 1px solid white;
+    display: inline-block;
 }
 
 .employee-skill-map-insert {
     border-radius: 10px;
-    padding: 0px 20px;
+    display: inline-block;
+   
 }
 
 .employee-skill-map-insert-button {
@@ -45,12 +47,13 @@
     border-radius: 10px;
     width: 200px;
     border: 1px solid white;
+    display: inline-block;
 
 }
 
 .employee-skill-map-filter {
-    padding-left: 385px;
-    display: flex;
+float: right;
+
 }
 
 .employee-skill-map-filter-coponent {
@@ -58,6 +61,7 @@
     border-radius: 10px;
     width: 150px;
     border: 1px solid white;
+    float: left;
 }
 
 .employee-skill-map-filter-coponent span {
@@ -76,7 +80,7 @@
 
 .employee-skill-map-table-filter {
     margin-top: 20px;
-    height: 560px;
+    height: 92%;
     overflow-y: auto;
 }
 
